--- a/client/assets/css/mycss.css
+++ b/client/assets/css/mycss.css
@@ -1,7 +1,12 @@
 .container {  
   padding-top:10px;
   margin: 0 auto;
+  max-width: 970px
 }
+
+/*.dev-width {
+	width: 970px;
+}*/
 
 .pure-form input.ng-dirty.ng-invalid {
   border-color: #e9322d;
